--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 @import './styles/common.scss';
 @import './styles/header.scss';
+@import './styles/search-form.scss';
 @import './styles/container.scss';
-@import './styles/load-more-btn.scss';
+@import './styles/gallery.scss';
 @import '~material-design-icons/iconfont/material-icons.css';
+@import './styles/load-more-btn.scss';
+@import './styles/lightbox.scss';
