--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -8,12 +8,12 @@
   margin-right: auto;
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 24px;
 }
 
 .gallery__image {
-  height: 300px;
+  height: 200px;
   object-fit: cover;
   max-width: 100%;
 }
@@ -47,8 +47,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  font-weight: normal;
+    font-style: normal;
+    font-size: 15px;
 }
 
 .material-icons {
   margin-right: 5px;
+  font-size: 15px;
 }
