Добавляю класс обработки событий по кнопке загрузить больше

--- a/src/styles/load-more-btn.scss
+++ b/src/styles/load-more-btn.scss
@@ -1,3 +1,20 @@
 .load-more-btn {
   margin-top: 15px;
 }
+
+.load-more-btn.is-hidden {
+  display: none;
+}
+
+.load-more-btn > .spinner.is-hidden {
+  display: none;
+}
+
+.load-more-btn:disabled {
+  background-color: gray;
+
+  &:hover {
+    box-shadow: none;
+    cursor: auto;
+  }
+}
