Редактирую шаблон галереи и добавляю условие на появление кнопки загрузить больше

--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
 <li class="gallery__item">
     <div class="photo-card">
-        <img class="gallery__image" src={{webformatURL}} alt="" data-src={{largeImageURL}} data-id={{id}} />
+        <img class="gallery__image" src={{webformatURL}} alt={{pageURL}} data-src={{largeImageURL}} data-id={{id}} />
 
         <div class=" stats">
             <p class="stats-item">
